# ifc_mesh_extract

./: .gitignore  CMakeLists.txt  Dockerfile  docker_build.sh
apps/: ifc_extract_meshes.cpp
cmake/modules/: FindCartan.cmake  FindEigen.cmake  FindIfcOpenShell.cmake  FindOpenCascade.cmake
cmake/modules/self/: IFCMeshExtractConfig.cmake
include/: extract_objects.hpp  osdef.hpp
src/: extract_objects.cpp
